@@ -1,3 +1,5 @@
+2020/08/08
+• Bot ignores excessive   spaces.
 2020/07/31
 • Edit bad commands into good ones!
 • Improved alarm handling.
